[package]
name = "block-router"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "block_router"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.21"
thiserror = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
arrayref = "0.3"

# can switch later if needed.

[dev-dependencies]
solana-program-test = "1.18.21"
solana-sdk = "1.18.21"
